--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -74,6 +74,8 @@ a:hover {
 ul{
   padding: 0;
   margin: 0;
+  margin-left: 2rem;
+  margin-right: 2rem;
   list-style-type: none;
 }
 
@@ -151,6 +153,7 @@ a.brand {
 
 img {
   border-radius: 0.5rem;
+  margin-top: 1rem;
 }
 
 img.medium {
