--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -74,8 +74,7 @@ a:hover {
 ul{
   padding: 0;
   margin: 0;
-  margin-left: 2rem;
-  margin-right: 2rem;
+  margin-left: 1,5rem;
   list-style-type: none;
 }
 
@@ -83,6 +82,9 @@ li{
   margin-top: 1rem;
 }
 
+input,
+select,
+textarea,
 button {
   padding: 1rem;
   border-radius: 0.5rem;
@@ -91,10 +93,17 @@ button {
   font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+}
+
+button {
   background-color: #f8f8f8;
   cursor: pointer;
 }
 
+input:hover,
+select:hover,
+textarea:hover,
 button:hover {
   border: 0.1rem #404040 solid;
 }
@@ -140,6 +149,7 @@ a.brand {
   flex: 1 1 45rem;
 }
 
+
 .col-1.cc1 {
   flex: 1 1 25rem;
   max-width: 45rem;
@@ -153,7 +163,6 @@ a.brand {
 
 img {
   border-radius: 0.5rem;
-  margin-top: 1rem;
 }
 
 img.medium {
