Added badge, cart actions, local storage

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,7 +68,7 @@ a {
 }
 
 a:hover {
-  color: #e50aec;
+  color: #86fd6e;
 }
 
 ul{
@@ -129,6 +129,19 @@ a.brand {
   font-weight: bold;
 }
 
+a.brand:hover{
+  color: #86fd6e;
+}
+
+.badge {
+  background-color: #f02020;
+  color: white;
+  border-radius: 50%;
+  padding:  0.2rem 0.7rem;
+  font-size: 1.4rem;
+  margin-left: 0.2rem;
+}
+
 /* Row section */
 .row{
   display: flex;
@@ -147,6 +160,7 @@ a.brand {
 
 .col-1 {
   flex: 1 1 45rem;
+  padding-left: 1rem;
 }
 
 
@@ -170,9 +184,14 @@ img.medium {
   width: 100%;
 }
 
+img.medium:hover{
+  opacity: 0.8;
+}
+
 img.large {
   width: 100%;
   max-width: 600px;
+  margin-top: 1rem;
 }
 
 /* Cart */
