--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -173,10 +173,19 @@ a.brand:hover{
   flex: 2 1 50rem;
 }
 
+.min-30 {
+  min-width: 30rem;
+}
+
 /* images */
 
 img {
   border-radius: 0.5rem;
+}
+
+img.small {
+  max-width: 5rem;
+  width: 100%;
 }
 
 img.medium {
