Created Signin screen and added new route

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,9 +45,8 @@ footer {
   grid-area: footer;
   background-color: #262627;
   color: #ffffff;
+  height: 20rem;
 }
-
-
 
 
 /* Common */
@@ -68,7 +67,7 @@ a {
 }
 
 a:hover {
-  color: #86fd6e;
+  color: #b011e0;
 }
 
 ul{
@@ -130,7 +129,7 @@ a.brand {
 }
 
 a.brand:hover{
-  color: #86fd6e;
+  color: #b011e0;
 }
 
 .badge {
@@ -256,4 +255,22 @@ img.large {
 .alert-danger {
   color: #a02020;
   background-color: #ffe0e0e0;
+}
+
+/* Form */
+
+.form {
+  max-width: 60rem;
+  margin: 0 auto;
+}
+
+.form > div {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+
+.form label {
+  margin: 1rem 0;
+  display: block;
 }
