Added shipping address screen, created checkout steps component, defined cart action to save shipping address, in cart reducer updated redux store based on save shipping address action

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -300,3 +300,17 @@ img.large {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+/* Checkout Steps */
+.checkout-steps > div {
+  border-top: 0.3rem #c0c0c0 solid;
+  color: #c0c0c0;
+  flex: 1;
+  padding: 1rem;
+  font-weight: bold;
+}
+
+.checkout-steps > div.active {
+  border-top-color:#b011e0;
+  color: #b011e0;
+}
