Created a new route in backenf to return the orders of current user, in App.js added a new screen for order history, , in index css created a style for table, in store js added a new reducer for returning list of orders, in order action added a new action to return orders of current user, in order constant and reducers implemented that action, created order history screen to  show the list of orders of the current user

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -115,6 +115,10 @@ button.block {
   width: 100%;
 }
 
+button.small {
+  font-size: 1.2rem;
+}
+
 /* Header links */
 
 header a {
@@ -321,4 +325,25 @@ img.large {
 .checkout-steps > div.active {
   border-top-color:#b011e0;
   color: #b011e0;
+}
+
+/* Table */
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table tbody tr:nth-of-type(odd) {
+  background-color: #f4f4f4;
+}
+
+.table td,
+.table th {
+  text-align: left;
+  border: 0.1rem solid #e4e4e4;
+  padding: 0.5rem;
+}
+
+.table button {
+  margin: 0 0.2rem;
 }
