--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -350,3 +350,31 @@ img.large {
 .table button {
   margin: 0 0.2rem;
 }
+
+/* Dashboard */
+
+.summary > li {
+  border: 0.1rem #c0c0c0 solid;
+  margin: 2rem;
+  border-radius: 0.5rem;
+  flex: 1 1 20rem;
+}
+.summary-title {
+  font-size: 2rem;
+  padding: 1rem;
+}
+.summary-body {
+  font-size: 4rem;
+  padding: 1rem;
+  text-align: center;
+}
+
+.summary-title.color1 {
+  background-color: #A49393;
+}
+.summary-title.color2 {
+  background-color: #EED6D3;
+}
+.summary-title.color3 {
+  background-color: #E8B4B8;
+}
